feat: add all the demos

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <title>Open-wc Lit Demos</title>
     <script src="./node_modules/@webcomponents/webcomponentsjs/custom-elements-es5-adapter.js"></script>
     <script src="./node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
